# BENDR

./: .gitignore  .pre-commit-config.yaml  BENDR.ipynb  Makefile  download_tueg.py  pyproject.toml  run_downstream.sh  tueg_tools.py  wget_dataset.sh
bendr/: analysis.py  dn3_ext.py  downstream.py  pretrain.py  result_tracking.py  sequence_prediction.py  utils.py
bendr/dn3/: utils.py
bendr/dn3/configuratron/: __init__.py  extensions.py
bendr/dn3/metrics/: base.py
bendr/dn3/trainable/: layers.py  models.py  processes.py
bendr/dn3/transforms/: batch.py  channels.py  instance.py
configs/: downstream.yml  downstream_datasets.yml
dn3/configuratron/: config.py
dn3/data/: dataset.py  ood.py  utils.py
dn3/trainable/: experimental.py  layers.py  models.py  utils.py
dn3/transforms/: preprocessors.py
